transformer_defconfig: max logginig

--- a/configs/transformer_defconfig
+++ b/configs/transformer_defconfig
@@ -38,3 +38,12 @@ CONFIG_TEGRA20_SLINK=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_TEGRA=y
+# Logging part
+CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_UART_PHYS=0x70006000
+CONFIG_LOG_MAX_LEVEL=9
+CONFIG_LOG_DEFAULT_LEVEL=6
+CONFIG_SPL_LOG=y
+CONFIG_SPL_LOG_MAX_LEVEL=7
+CONFIG_TPL_LOG=y
+CONFIG_TPL_LOG_MAX_LEVEL=7
